--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -5,6 +5,12 @@ html, body, *, *::after, *::before {
   font-size: 16px;
   color: #262523;
   font-family: 'Lato', sans-serif;
+  transition: .3s cubic-bezier(0.19, 1, 0.22, 1);
+}
+
+::selection {
+  background-color: #26252360;
+  color: #F2EADF;
 }
 
 body {
@@ -20,5 +26,6 @@ h1, h2, h3, h4, h5 {
 
 strong {
   font-size: inherit;
-  font-weight: 700;
+  font-weight: 00;
+  text-decoration: underline;
 }
