--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,6 +1,6 @@
 .container-home {
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -27,8 +27,4 @@
   transform: scale(1.4);
   box-shadow: 2px 2px 20px #26252360;
   transition: .5s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.footer-copyrights {
-  font-style: italic;
 }
