--- a/src/styles/SyncMobile.css
+++ b/src/styles/SyncMobile.css
@@ -1,4 +1,4 @@
-.container-home {
+/* .container-home {
   width: 100vw;
   height: 100vh;
   display: flex;
@@ -31,4 +31,4 @@
 
 .footer-copyrights {
   font-style: italic;
-}
+} */
