--- a/src/styles/SyncMobile.css
+++ b/src/styles/SyncMobile.css
@@ -1,34 +1,5 @@
-/* .container-home {
-  width: 100vw;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
+.big-boy {
+  font-size: 2rem;
+  padding: 2rem;
+  letter-spacing: 1rem;
 }
-
-.title-home {
-  font-size: 5rem;
-}
-
-.subtitle-home {
-  width: 400px;
-  text-align: center;
-  font-size: 1.4rem;
-  font-weight: 400;
-}
-
-.qr-home {
-  transition: .5s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.qr-home:hover {
-  transform: scale(1.4);
-  box-shadow: 2px 2px 20px #26252360;
-  transition: .5s cubic-bezier(0.19, 1, 0.22, 1);
-}
-
-.footer-copyrights {
-  font-style: italic;
-} */
